--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "jszip": "^3.10.1",
     "qrcode": "^1.5.3",
     "rxjs": "^7.8.1",
     "tslib": "^2.6.2",
