--- a/api/package.json
+++ b/api/package.json
@@ -2,6 +2,7 @@
   "name": "microlandia-api",
   "version": "0.0.1",
   "private": true,
+  "license": "MIT",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
@@ -16,4 +17,3 @@
     "morgan": "^1.10.0"
   }
 }
-
