--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "microlandia-frontend",
   "version": "0.0.1",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
